cmake_minimum_required(VERSION 3.17)
project(project2)

set(CMAKE_CXX_STANDARD 11)

#add_executable(project2 E1/A.cpp)

add_executable(project2 main.cpp)
add_executable(project2-1 main2.cpp)

add_executable(H3A H3/A.cpp)
add_executable(H3B H3/B.cpp)
add_executable(H3C H3/C.cpp)
add_executable(H3D H3/D.cpp)
add_executable(H3E H3/E.cpp)

add_executable(C3 C3/C.cpp C3/C.cpp Week5/A.cpp)

add_executable(H4A H4/A.cpp)
add_executable(H4B H4/B.cpp)
add_executable(H4C H4/C.cpp)
add_executable(H4D H4/D.cpp)
add_executable(H4E H4/E.cpp)

add_executable(H4-A H4-1/A.cpp)
add_executable(H4-B H4-1/B.cpp)
add_executable(H4-C H4-1/C.cpp)
add_executable(H4-D H4-1/D.cpp)
add_executable(H4-E H4-1/E.cpp)
add_executable(H4-F H4-1/F.cpp)

add_executable(H5-A H5/A.cpp)
add_executable(H5-B H5/B.cpp)
add_executable(H5-C H5/C.cpp)
add_executable(H5-D H5/D.cpp)
add_executable(H5-E H5/E.cpp)

add_executable(H6-A H6/A.cpp)
add_executable(H6-B H6/B.cpp)
add_executable(H6-C H6/C.cpp)
add_executable(H6-D H6/D.cpp)
add_executable(H6-E H6/E.cpp)

add_executable(CSP-2-A CSP-2/A.cpp)
add_executable(CSP-2-B CSP-2/B.cpp)
add_executable(CSP-2-C CSP-2/C.cpp)
add_executable(CSP-2-D CSP-2/D.cpp)

add_executable(H7-A H7/A.cpp)
add_executable(H7-B H7/B.cpp)
add_executable(H7-C H7/C.cpp)
add_executable(H7-D H7/D.cpp)
add_executable(H7-E H7/E.cpp)

add_executable(H8-A H8/A.cpp)
add_executable(H8-B H8/B.cpp)
add_executable(H8-C H8/C.cpp)
add_executable(H8-D H8/D.cpp)

add_executable(H9-A H9/A.cpp)
add_executable(H9-B H9/B.cpp)

add_executable(H10-A H10/A.cpp)
add_executable(H10-B H10/B.cpp)
add_executable(H10-C H10/C.cpp)
add_executable(H10-D H10/D.cpp)
add_executable(H10-E H10/E.cpp)

add_executable(H11-A H11/A.cpp)
add_executable(H11-B H11/B.cpp)
add_executable(H11-C H11/C.cpp)
add_executable(H11-D H11/D.cpp)
add_executable(H11-E H11/E.cpp)

add_executable(H12-A H12/A.cpp)
add_executable(H12-B H12/B.cpp)
add_executable(H12-C H12/C.cpp)
add_executable(H12-D H12/D.cpp)
add_executable(H12-E H12/E.cpp)

add_executable(H13-A H13/A.cpp)
add_executable(H13-B H13/B.cpp)
add_executable(H13-C H13/C.cpp)
add_executable(H13-D H13/D.cpp)

add_executable(H14-A H14/A.cpp)
add_executable(H14-B H14/B.cpp)
add_executable(H14-C H14/C.cpp)
add_executable(H14-D H14/D.cpp)
add_executable(H14-E H14/E.cpp)

add_executable(H15-A H15/A.cpp)
add_executable(H15-B H15/B.cpp)
add_executable(H15-C H15/C.cpp)
add_executable(H15-D H15/D.cpp)

add_executable(T3-3 T3/T3-3.cpp)
add_executable(T3-4 T3/T3-4.cpp)
add_executable(T3-3T T3/T3-3T.cpp)

add_executable(T3-2A T3-2/A.cpp)
add_executable(T3-2B T3-2/B.cpp)




add_executable(Week5A Week5/A.cpp)
add_executable(Week6A Week6/A.cpp)
add_executable(Week7A Week7/A.cpp)