cmake_minimum_required(VERSION 3.17)
project(project1)

set(CMAKE_CXX_STANDARD 11)

add_executable(project1 main.cpp)
add_executable(H1A H1/A.cpp)
add_executable(H1B H1/B.cpp)

add_executable(E1IO E1/IO1.cpp)
add_executable(E1B E1/IO2.cpp)
add_executable(E1D E1/D.cpp)
add_executable(E1P E1/P.cpp)
add_executable(E1Q E1/Q.cpp)
add_executable(E1K E1/K.cpp)
add_executable(E1M E1/M.cpp)
add_executable(E1N E1/N.cpp)
add_executable(E1O E1/O.cpp)

add_executable(H2A H2/A.cpp)
add_executable(H2B H2/B.cpp)
add_executable(H2C H2/C.cpp)
add_executable(H2D H2/D.cpp)

add_executable(H3A H3/A.cpp)
add_executable(H3B H3/B.cpp)
add_executable(H3C H3/C.cpp)
add_executable(H3D H3/D.cpp)
add_executable(H3E H3/E.cpp)

add_executable(H4A H4/A.cpp)
add_executable(H4B H4/B.cpp)
add_executable(H4C H4/C.cpp)
add_executable(H4D H4/D.cpp)

add_executable(H5A H5/A.cpp)
add_executable(H5B H5/B.cpp)
add_executable(H5C H5/C.cpp)
add_executable(H5D H5/D.cpp)
add_executable(H5E H5/E.cpp)

add_executable(H6A H6/A.cpp)
add_executable(H6B H6/B.cpp)
add_executable(H6C H6/C.cpp)
add_executable(H6D H6/D.cpp)
add_executable(H6E H6/E.cpp)

add_executable(H7A H7/A.cpp)
add_executable(H7B H7/B.cpp)
add_executable(H7C H7/C.cpp)
add_executable(H7D H7/D.cpp)
add_executable(H7E H7/E.cpp)



add_executable(H8A H8/A.cpp)
add_executable(H8B H8/B.cpp)
add_executable(H8C H8/C.cpp)
add_executable(H8D H8/D.cpp)

add_executable(H9A H9/A.cpp)
add_executable(H9B H9/B.cpp)
add_executable(H9C H9/C.cpp)
add_executable(H9D H9/D.cpp)
add_executable(H9E H9/E.cpp)

add_executable(H10A H10/A.cpp)
add_executable(H10B H10/B.cpp)
add_executable(H10C H10/C.cpp)
add_executable(H10D H10/D.cpp)
add_executable(H10E H10/E.cpp)

add_executable(H11A H11/A.cpp)
add_executable(H11B H11/B.cpp)
add_executable(H11C H11/C.cpp)
add_executable(H11D H11/D.cpp)
add_executable(H11E H11/E.cpp)

add_executable(H12A H12/A.cpp)
add_executable(H12B H12/B.cpp)
add_executable(H12C H12/C.cpp)
add_executable(H12D H12/D.cpp)
add_executable(H12E H12/E.cpp)



add_executable(H15A H15/A.cpp)
add_executable(H15B H15/B.cpp)
add_executable(H15C H15/C.cpp)
add_executable(H15D H15/D.cpp)

add_executable(CSP2-A1 CSP2/A1.cpp)
add_executable(CSP2-A2 CSP2/A2.cpp)
add_executable(CSP2-B1 CSP2/B1.cpp)
add_executable(CSP2-B2 CSP2/B2.cpp)
add_executable(CSP2-C1 CSP2/C1.cpp)
add_executable(CSP2-C2 CSP2/C2.cpp)

add_executable(T3-1 T3/T3-1.cpp)
add_executable(T3-2 T3/T3-2.cpp)
add_executable(tree T3/tree.cpp)

